some code refactor, added responsivity to filters

--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -1,7 +1,9 @@
 {
-  "extends": ["prettier"],
+  "extends": ["airbnb", "prettier"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+    "import/no-named-as-default": 0
   }
 }
