--- a/src/.prettierrc
+++ b/src/.prettierrc
@@ -1,6 +1,4 @@
 {
-  "semi": true,
-  "trailingComma": "all",
-  "singleQuote": true,
-  "printWidth": 70
+  "printWidth": 100,
+  "singleQuote": true
 }
