--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-lazyload": "^2.6.5",
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-saga": "^1.1.3",
     "styled-components": "^4.4.1"
