logic extraction from news-item and filters components (container HOC pattern)

--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -3,6 +3,7 @@
   "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": ["error"],
+    "import/prefer-default-export": "off",
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
     "import/no-named-as-default": 0
   }
