--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.12.0",
     "react-lazyload": "^2.6.5",
     "react-redux": "^7.1.3",
-    "react-scripts": "3.2.0",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.0",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
@@ -40,7 +41,6 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-config-prettier": "^6.7.0",
